Change refactors how vocabularies are installed and updated. Work relates to Issue #1157. Also fixes Issue #850.